--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "servor": "^4.0.2"
   },
   "devDependencies": {
+    "html-webpack-plugin": "^5.6.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.4.4",
     "webpack": "^5.91.0",
