--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "servor": "^4.0.2"
   },
   "devDependencies": {
+    "css-loader": "^7.1.0",
     "html-webpack-plugin": "^5.6.0",
+    "sass": "^1.74.1",
+    "sass-loader": "^14.1.1",
+    "style-loader": "^4.0.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.4.4",
     "webpack": "^5.91.0",
